--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Arview</string>
     <string name="rate_us">Rate Us</string>
     <string name="send_feedback">Send feedback</string>
+    <string name="rate_me">Rate me!</string>
 </resources>
